Implemented get tweet by id and delete all tweets. Implemented showing tweets list with fragment, viewmodel and adapter.

--- a/app/src/main/res/layout/fragment_tweers_list.xml
+++ b/app/src/main/res/layout/fragment_tweers_list.xml
@@ -4,6 +4,10 @@
     <data>
 
         <import type="android.view.View" />
+
+        <variable
+            name="viewmodel"
+            type="com.twitsplit.viewmodel.TweetsListModel" />
     </data>
 
     <FrameLayout style="@style/Match">
